# discord-mass-uploader

./: .gitignore  Cargo.toml  LICENSE  README.md  bun.lockb  create_db.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  Cargo.toml
backend/src/: api.rs  database.rs  event_handler.rs  main.rs  models.rs  routes.rs
backend/src/utils/: download.rs
frontend/: .env.example  bun.lockb  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/download/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: deleteConfirmation.tsx  footer.tsx
frontend/src/lib/: index.ts
src/: classes.ts  command_trait.rs  event_handler.rs  index.ts  main.rs  options.rs  utils.ts
src/commands/: mod.rs  ping.rs  upload.rs  upload.ts
src/handlers/: interactionCreate.ts  ready.ts
src/utils/: download.rs
